Fix SequencedCollection API compatibility for Java 21 upgrade